Dodano informacje o agentach i oczyszczono kod cpp

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -86,3 +86,11 @@
   year = { }, 
   note = "[]"
 }
+
+@online{agent_examples,
+  author = {Bassel Karami},
+  title = {{Intro to Agent Based Modeling}},
+  howpublished = "\newline \url{https://towardsdatascience.com/intro-to-agent-based-modeling-3eea6a070b72}",
+  year = { }, 
+  note = "[]"
+}
