Dodano resztę informacji o agentach i uporządkowano grafiki

--- a/dyplomWFAMarcinPietrzak.tex
+++ b/dyplomWFAMarcinPietrzak.tex
@@ -303,7 +303,7 @@ Program był pisany w silniku Unreal Engine 4, z powodu że korzystam z tego sil
 
 \begin{figure}[H]%
 \centering
-\includegraphics[width=0.5\columnwidth]{graphics/DoublePendulum.png}
+\includegraphics[width=0.5\columnwidth]{graphics/pendulum/DoublePendulum.png}
 \caption{$\theta$ 1-2 kąty swobodne, m1 m2 masy obiektów, l1 l2 długości pręta
 \label{BPExample}}%
 %
@@ -415,7 +415,7 @@ Na podstawie powyższych klas zostały stworzone klasy BluePrintowe które możn
 
 \begin{figure}[H]%
 \centering
-\includegraphics[width=0.7\columnwidth]{graphics/PendulumBP.png}
+\includegraphics[width=0.7\columnwidth]{graphics/pendulum/PendulumBP.png}
 \caption{Ustawiony mesh i tekstura dla wahadła 
 \label{BPExample}}%
 %
@@ -426,7 +426,7 @@ BP\_PendulumSpawn jest aktorem który zostaje umieszczony na poziomie, trzeba ty
 
 \begin{figure}[H]%
 \centering
-\includegraphics[width=0.7\columnwidth]{graphics/PendulumSpawnerBP.png}
+\includegraphics[width=0.7\columnwidth]{graphics/pendulum/PendulumSpawnerBP.png}
 \caption{Ustawione wahadło do stworzenia i widget 
 \label{BPExample}}%
 %
@@ -437,7 +437,7 @@ Klasa WBP\_PendulumControl jest odpowiedzialna kontakt miedzy użytkownikiem a p
 
 \begin{figure}[H]%
 \centering
-\includegraphics[width=0.7\columnwidth]{graphics/PendulumControlBP.png}
+\includegraphics[width=0.7\columnwidth]{graphics/pendulum/PendulumControlBP.png}
 \caption{Wygląd widgetu w programie
 \label{BPExample}}%
 %
@@ -452,13 +452,13 @@ W programie wahadło wygląda następująco:
 	\centering
 	\begin{subfigure}{.5\textwidth}
 		\centering
-		\includegraphics[width=0.8\linewidth]{graphics/PendulumInUE_1.png}
+		\includegraphics[width=0.8\linewidth]{graphics/pendulum/PendulumInUE_1.png}
 		\caption{Wahadła na początku symulacji}	
 		\label{ref:subref_a}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 		\centering
-		\includegraphics[width=0.8\linewidth]{graphics/PendulumInUE_2.png}
+		\includegraphics[width=0.8\linewidth]{graphics/pendulum/PendulumInUE_2.png}
 		\caption{Wahadła na końcu symulacji}
 		\label{ref:subref_b}
 	\end{subfigure}%
@@ -518,13 +518,13 @@ Na podstawie powyższych klas zostały stworzone klasy BluePrintowe które możn
 	\centering
 	\begin{subfigure}{.45\textwidth}
 		\centering
-		\includegraphics[width=0.8\linewidth]{graphics/CellActorInUE_1.png}
+		\includegraphics[width=0.8\linewidth]{graphics/gameoflife/CellActorInUE_1.png}
 		\caption{Ustawiony mesh w programie dla komórki}	
 		\label{ref:subref_a}
 	\end{subfigure}%
 	\begin{subfigure}{.45\textwidth}
 		\centering
-		\includegraphics[width=0.8\linewidth]{graphics/CellActorInUE_2.png}
+		\includegraphics[width=0.8\linewidth]{graphics/gameoflife/CellActorInUE_2.png}
 		\caption{Ustawiony wygląd w programie podczas akcji}
 		\label{ref:subref_b}
 	\end{subfigure}%
@@ -538,7 +538,7 @@ BP\_GridActor2D jest klasą BluePrint która znajdzie się na poziomie gry. W kl
 
 \begin{figure}[H]%
 \centering
-\includegraphics[width=0.7\columnwidth]{graphics/GridActor2DInUE_1.png}
+\includegraphics[width=0.7\columnwidth]{graphics/gameoflife/GridActor2DInUE_1.png}
 \caption{Ustawienia BP\_GridActor2D 
 \label{BPExample}}%
 %
@@ -551,7 +551,7 @@ Klasa WBP\_GameOfLifeControll jest odpowiedzialna kontakt miedzy użytkownikiem 
 
 \begin{figure}[H]%
 \centering
-\includegraphics[width=0.7\columnwidth]{graphics/GameOfLifeControllInUE_1.png}
+\includegraphics[width=0.7\columnwidth]{graphics/gameoflife/GameOfLifeControllInUE_1.png}
 \caption{Wygląd widgetu w programie
 \label{BPExample}}%
 %
@@ -566,13 +566,13 @@ W programie Gra w życie wygląda następująco:
 	\centering
 	\begin{subfigure}{.5\textwidth}
 		\centering
-		\includegraphics[width=0.8\linewidth]{graphics/GOLInUE_1.png}
+		\includegraphics[width=0.8\linewidth]{graphics/gameoflife/GOLInUE_1.png}
 		\caption{Gra w życie podczas ustawia stanu początkowego}	
 		\label{ref:subref_a}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 		\centering
-		\includegraphics[width=0.8\linewidth]{graphics/GOLInUE_2.png}
+		\includegraphics[width=0.8\linewidth]{graphics/gameoflife/GOLInUE_2.png}
 		\caption{Gra w życie w trakcie trwania symulacji}
 		\label{ref:subref_b}
 	\end{subfigure}%
@@ -588,7 +588,7 @@ W programie Gra w życie wygląda następująco:
 
 \begin{figure}[H]%
 \centering
-\includegraphics[width=0.4\columnwidth]{graphics/Edward_lorenz.jpg}
+\includegraphics[width=0.4\columnwidth]{graphics/butterfly/Edward_lorenz.jpg}
 \caption{Edward Norton Lorenz 1917-2008 
 \label{BPExample}}%
 %
@@ -632,7 +632,7 @@ Na podstawie powyższych klas zostały stworzone klasy BluePrintowe które możn
 
 \begin{figure}[H]%
 \centering
-\includegraphics[width=0.7\columnwidth]{graphics/ButterflyParticleSystem.png}
+\includegraphics[width=0.7\columnwidth]{graphics/butterfly/ButterflyParticleSystem.png}
 \caption{Wygląd menu do tworzenia efektów cząsteczkowych w UE4 
 \label{BPExample}}%
 %
@@ -644,7 +644,7 @@ W BP\_ButterflySpawner ustawiamy jakiego aktora chcemy ustawić na scenie, oraz 
 
 \begin{figure}[H]%
 \centering
-\includegraphics[width=0.7\columnwidth]{graphics/ButterflySpawner.png}
+\includegraphics[width=0.7\columnwidth]{graphics/butterfly/ButterflySpawner.png}
 \caption{Wygląd menu do tworzenia efektów cząsteczkowych w UE4 
 \label{BPExample}}%
 %
@@ -658,7 +658,7 @@ W programie Efekt Motyla wygląda następująco:
 
 \begin{figure}[H]%
 \centering
-\includegraphics[width=0.7\columnwidth]{graphics/ButterflyInUE_1.png}
+\includegraphics[width=0.7\columnwidth]{graphics/butterfly/ButterflyInUE_1.png}
 \caption{Wygląd motyli w programie
 \label{BPExample}}%
 %
@@ -693,6 +693,71 @@ Ostatnia klasą jest AgentControl, który odpowiada za tworzenie UI i komunikacj
 
 \subsubsection{Model Agentowy - UE4}
 
+Na podstawie kodów C++ stworzyłem w UE4 odpowiednie klasy BluePrintowe, które są dziećmi klas z kodu źródłowego. Klasy BP\_RabbitAgent, BP\_PlantAgent i BP\_WolfAgent
+Ustawia się w taki sam sposób, poprzez wybranie odpowiedniego mesha jakiego chcemy dla danego agenta i wybrać jakiego actora ma stworzyć w trakcie etapu reprodukcji, z wyłączeniem PlantAgent, który powstaje tylko w AgentSpawner. Tutaj też wybieramy, jaki kolor ma mieć actor, kiedy będziemy w nim wchodzić w interakcje na etapie ręcznego tworzenia planszy.
+
+\begin{figure}[H]%
+\centering
+\includegraphics[width=0.4\columnwidth]{graphics//agent/BP_AgentActor.png}
+\caption{Ustawienia Agentów w UE4 
+\label{BPExample}}%
+%
+\qquad
+\end{figure} 
+
+
+Kolejną klasą jest BP\_Spawner, która zostanie umieszczona na poziomie. W niej ustawiamy jakich dokładnie agentów chcemy ustawić, których stworzyliśmy w BluePrintach oraz jak duży ma być obszar tworzenia nowych agentów przez spawner.
+
+\begin{figure}[H]%
+\centering
+\includegraphics[width=0.6\columnwidth]{graphics//agent/BP_SpawnerAgent.png}
+\caption{Ustawienia Spawnera w UE4 
+\label{BPExample}}%
+%
+\qquad
+\end{figure} 
+
+Kolejną klasą jest BP\_AgentSpawnBox. Podobnie jak BP\_Spawner tworzy nowych agentów, z tą różnicą, że w nim ustawiamy tylko jeden rodzaj agenta do stworzenia. Po ustawieniu agenta za pomocą kontrolerów ruchowych, możemy go postawić na planszy.
+
+\begin{figure}[H]%
+\centering
+\includegraphics[width=0.6\columnwidth]{graphics//agent/BP_AgentSpawnBox.png}
+\caption{Ustawienia SpawnBox w UE4 
+\label{BPExample}}%
+%
+\qquad
+\end{figure} 
+
+Ostatnie dwie klasy to BP\_AgentTable i BP\_AgentControl. Pierwsza w nim jest planszą w której ustwiamy jak plansza ma wyglądać oraz miejsce gdzie możemy położyć i zabrać agentów. Drugą klasa jest widgetem i tak jak w poprzednich modelach, poprzez najechanie kontrolerem na odpowiednią opcje symulacja startuję, albo się resetuje.
+
+\begin{figure}[H]%
+	\centering
+	\begin{subfigure}{.5\textwidth}
+		\centering
+		\includegraphics[width=0.8\linewidth]{graphics//agent/BP_AgentTable.png}
+		\caption{Wygląd planszy w UE4}	
+		\label{ref:subref_a}
+	\end{subfigure}%
+	\begin{subfigure}{.5\textwidth}
+		\centering
+		\includegraphics[width=0.8\linewidth]{graphics//agent/BP_AgentControl.png}
+		\caption{Wygląd widgetu w UE4}
+		\label{ref:subref_b}
+	\end{subfigure}%
+\label{ref:ref}
+\end{figure}
+
+\subsubsection{Model Agentowy - Wygląd w programie}
+W programie Model Agentowy wygląda następująco:
+
+\begin{figure}[H]%
+\centering
+\includegraphics[width=0.7\columnwidth]{graphics/agent/AgentInUE_1.png}
+\caption{Model Agentowy w programie
+\label{BPExample}}%
+%
+\qquad
+\end{figure}  
 
 \subsection{Boids}
 \subsubsection{Boids - kod}
