Dodano opis boidów

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -3,94 +3,110 @@
   author = {Steam},
   title = {{Ankieta używanego sprzętu na steam}},
   howpublished = "\newline \url{https://store.steampowered.com/hwsurvey}",
-  year = { }, 
-  note = "[]"
+  year = { }
 }
 
 @online{PlayStation_VR2,
   author = {Sony},
   title = {{Zapowiedź PlayStation VR2}},
   howpublished = "\newline \url{https://www.playstation.com/pl-pl/ps-vr2/}",
-  year = { }, 
-  note = "[]"
+  year = { }
 }
 
 @online{porownanie_gogli,
   author = {VRcompare},
   title = {{Compare Oculus Quest and Oculus Quest 2}},
   howpublished = "\newline \url{https://vr-compare.com/compare?h1=pDTZ02PkT&h2=GeZ01ojF8}",
-  year = { }, 
-  note = "[]"
+  year = { }
 }
 
 @online{sprzedasz_gogli_VR,
   author = {IDC},
   title = {{AR/VR Headset Shipments Grew Dramatically in 2021}},
   howpublished = "\newline \url{https://www.idc.com/getdoc.jsp?containerId=prUS48969722}",
-  year = { }, 
-  note = "[]"
+  year = { }
 }
 
 @online{choroba_vr,
   author = {IDC},
   title = {{Choroba Symulatorowa}},
   howpublished = "\newline \url{https://vrpolska.eu/skad-sie-bierze-choroba-symulatorowa/}",
-  year = { }, 
-  note = "[]"
+  year = { }
 }
 
 @online{double_pendulum,
   author = {IDC},
   title = {{Wahadło podwójne}},
   howpublished = "\newline \url{https://web.archive.org/web/*/http://www.team.kdm.p.lodz.pl/master/Jankowski.pdf/}",
-  year = { }, 
-  note = "[]"
+  year = { }
 }
 
 @online{game_of_life,
   author = {IDC},
   title = {{Gra w życie }},
   howpublished = "\newline \url{https://www.sztucznainteligencja.org.pl/sztuczna-inteligencja-gra-w-zycie/}",
-  year = { }, 
-  note = "[]"
+  year = { }
 }
 
 @online{game_of_life_wiki,
   author = {IDC},
   title = {{Gra w życie }},
   howpublished = "\newline \url{https://en.wikipedia.org/wiki/Conway's_Game_of_Life/}",
-  year = { }, 
-  note = "[]"
+  year = { }
 }
 
 @online{efekt_motyla,
   author = {Jarosław Demkowski},
   title = {{Efekt motyla i dziwne atraktory}},
   howpublished = "\newline \url{https://web.archive.org/web/20160305054651/http://www-users.mat.umk.pl/~elodymek/Prezentacja.pdf/}",
-  year = { }, 
-  note = "[]"
+  year = { }
 }
 
 @online{burze_motyle,
   author = {Paul Halpern},
   title = {{O motylach i burzach}},
   howpublished = "\newline \url{https://web.archive.org/web/20100909161235/http://czytelnia.onet.pl/0,1161316,do_czytania.html/}",
-  year = { }, 
-  note = "[]"
+  year = { }
 }
 
 @online{motyle_cpp,
   author = {Maciej Matyka},
   title = {{Jak narysować Motyle Lorenza }},
   howpublished = "\newline \url{https://www.youtube.com/watch?v=XZ5QKKxHTXQ/}",
-  year = { }, 
-  note = "[]"
+  year = { }
 }
 
 @online{agent_examples,
   author = {Bassel Karami},
   title = {{Intro to Agent Based Modeling}},
   howpublished = "\newline \url{https://towardsdatascience.com/intro-to-agent-based-modeling-3eea6a070b72}",
-  year = { }, 
-  note = "[]"
+  year = { }
+}
+
+@online{flocking_system,
+  author = {Wayne Carlson},
+  title = {{Flocking Systems}},
+  howpublished = "\newline \url{https://ohiostate.pressbooks.pub/graphicshistory/chapter/19-2-flocking-systems/}",
+  year = { }
+}
+
+@online{boids_reynolds,
+  author = {Craig Reynolds},
+  title = {{Boids}},
+  howpublished = "\newline \url{https://www.red3d.com/cwr/boids/}",
+  year = { }
+}
+
+@online{boids_name,
+  author = {DonHopkins},
+  title = {{Boids Name}},
+  howpublished = "\newline \url{https://news.ycombinator.com/item?id=22710201}",
+  year = { }
+}
+
+@online{code_boids,
+  author = {Darman1136},
+  title = {{UE4Boids}},
+  howpublished = "\newline \url{https://github.com/Darman1136/UE4Boids}",
+  year = { }
 }
